# fastApi

./: .gitignore  README.md  pyproject.toml  test_console.py
fastapi/src/: auth.py  main.py
fastapi/src/data/: creature.py  explorer.py  init.py
fastapi/src/db/: cryptid.db
fastapi/src/fake/: creature.py  explorer.py  user.py
fastapi/src/service/: user.py
fastapi/src/web/: creature.py  explorer.py  user.py
fastapi/test/unit/data/: creature.py  explorer.py
fastapi/test/unit/service/: test_creature.py
src/data/: creature.py  explorer.py  user.py
src/db/: cryptid.db  cryptid.db-journal
src/model/: user.py
src/service/: creature.py  explorer.py  user.py
src/web/: creature.py  explorer.py  user.py
test/unit/data/: user.py
test/unit/web/: creature.py  explorer.py  user.py
