[project]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = [
    {name = "MarkmMess"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standart] (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
